# DistributedBudget

./: .gitignore  README.md
src/: CMakeLists.txt  PocoConfig.cmake
src/cmake/: PocoConfig.cmake
src/cmake/Modules/: FindCppUnit.cmake  FindPoco.cmake
src/core/: Account.cpp  Account.h  Budget.cpp  Budget.h  CMakeLists.txt  Category.cpp  Category.h  DistributedItem.h  DistributedItemsFactory.cpp  DistributedItemsFactory.h  IBalanceStriker.h  IDistributedItem.h  ISerializer.h  ItemsLoader.cpp  ItemsLoader.h  SHA1EngineExt.cpp  SHA1EngineExt.h  SerializationHelpers.h  SettingsMng.cpp  SettingsMng.h  TObjectHolder.h  Transaction.cpp  Transaction.h  types.h
src/core/DistributedItems/: DistributedItemsFactory.cpp  DistributedItemsFactory.h  DistributedItemsFactoryCtrl.cpp  DistributedItemsFactoryCtrl.h
src/core/protobuf/: Account.proto  Budget.proto  Category.proto  Sha.proto  Transaction.proto
src/core/serializers/: FileLoadSerializer.cpp  FileLoadSerializer.h  FileSaveSerializer.cpp  FileSaveSerializer.h  MemLoadSerializer.cpp  MemLoadSerializer.h  MemSaveSerializer.cpp  MemSaveSerializer.h
src/platform/: CMakeLists.txt
src/platform/android/: CMakeLists.txt
src/platform/qt/: CMakeLists.txt
src/tools/: Singleton.h
src/unittests/: AccountBalanceTest.cpp  AccountBalanceTest.h  BudgetBalanceTest.cpp  BudgetBalanceTest.h  CMakeLists.txt  FileItemsTest.cpp  FileItemsTest.h  MemSerializerTest.cpp  MemSerializerTest.h  ProtoSimpleSerializeTest.cpp  ProtoSimpleSerializeTest.h  SimpleTest.cpp  SimpleTest.h  TransactionIdTest.cpp  TransactionIdTest.h  main.cpp
tools/: create_env.sh
